[package]
name = "discrakt"
version = "2.2.3"
edition = "2021"
authors = ["afonsojramos"]
description = "Easy to Use Trakt/Plex Discord Rich Presence"
repository = "https://github.com/afonsojramos/discrakt"
license = "MIT"
keywords = ["discord", "trakt", "rust"]
readme = "README.md"
exclude = [".github/*", "images/*.psd", "credentials.ini", ".gitignore"]

[dependencies]
discord-rich-presence = { git = "https://github.com/vionya/discord-rich-presence.git", rev = "b58fc8ce53548d27684c8cfb4d0110f47206ef5f" }
ureq = { version = "2.10.1", features = ["json"] }
configparser = { version = "3.1.0", features = ["indexmap"] }
serde = { version = "1.0.208", features = ["derive"] }
chrono = "0.4.38"
webbrowser = "1.0.1"

[profile.release]
strip = "debuginfo"
